style: adjust z-index to ensure Pokéball scrolls behind BETA RELEASE container
- Set z-index: -1 to ensure the Pokéball image correctly scrolls behind the BETA RELEASE text container.

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -24,6 +24,7 @@ header {
         position: absolute;
         left: -25%;
         height: inherit;
+        z-index: -1;
         filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.8));
       }
     }
